Faux Bingo plugin MVP
Combines the functionality of the 3 plugins that we use within the Faux community when running Bingos. Additional features are planned and will be rolled out in the coming weeks.

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Faux Bingo
+author=Ohio
+description=Helper plugin for Bingo events ran in the Faux Clan/Community
+tags=faux, bingo
+plugins=com.fauxbingo.FauxBingoPlugin
